portfolio-website/src/css/project.css
.project {
  background-color: var(--third-bg-color);
  max-width: 350px;
  min-width: 350px;
  max-height: 440px;
  min-height: 440px;
  border-radius: 12px;
  box-shadow: 10px 10px 0px rgba(0, 0, 0, 0.835);
  border: 4px solid black;
  text-align: center;
  margin-bottom: 50px;
  overflow: hidden;
}

.project__image {
  max-width: 350px;
  min-height: 170px;
  max-height: 170px;
  width: stretch;
  border-radius: 10px;
  margin-top: 10px;
}

.project-description {
  background-color: var(--third-bg-color);
  padding: 1rem;
  border-radius: 12px;
}

.project-description__overview {
  margin-bottom: 30px;
}

.project__link {
  text-decoration: none;
  background-color: var(--accent-color);
  padding: 0.5rem;
  border-radius: 7px;
  color: #f0f0f0;
  font-weight: 600;
  font-size: 1rem;
}

.project__link:hover {
  background-color: transparent;
  color: var(--accent-color);
  border: 1px solid var(--accent-color);
  transition: all 0.3s ease;
}

.project__link:not(:hover) {
  transition: all 0.3s ease;
}

.project__technologies {
  margin-top: 25px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 0.5rem;
}

@media (min-width: 428px) {
  .project {
    max-width: 400px;
    min-width: 400px;
    min-height: 430px;
    max-height: 430px;
  }
}

